# yoguido

./: .gitignore  LICENSE  README.md  build.sh  publish.sh  pyproject.toml
example/: crm_app.py
src/yoguido/: __init__.py
src/yoguido/core/: audit.py  compiler.py  decorators.py  runtime.py  state.py
src/yoguido/data/: db.py
src/yoguido/examples/: debug_buttons.py  debug_tools.py  demo_admin.py
src/yoguido/pages/: routing.py
src/yoguido/server/: app.py
src/yoguido/ui/: basic_components.py  chart_components.py  components.py  data_components.py  form_components.py  layout_components.py  navigation_components.py
